# pmu_30

./: .gitattributes  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_UPDATE_PLAN.md  PROJECT_ACTION_PLAN.md  PROJECT_DEVELOPMENT_ROADMAP.md  README.md  README_RU.md  SYNCHRONIZATION_PLAN.md  TODO.md  configurator_binary_test.py  firmware_button_test.py  firmware_config_test.py  firmware_output_link_test.py  firmware_protocol_test.py  firmware_telemetry_test.py  firmware_timer_test.py  firmware_virt_test.py  start_dev.bat  start_dev.ps1  ПЛАН_СИНХРОНИЗАЦИИ.md
configurator/: .gitignore  PMU-30 Configurator.spec  README.md  README_ECUMASTER.md  README_PROFESSIONAL.md  REFACTORING_PLAN.md  build_exe.bat  build_exe.py  launch.py  pmu_configurator.spec  pyproject.toml  requirements.txt  run_critical_tests.py  run_monitor.bat  run_simulator.py  runtime_hook.py  show_available_styles.py  test_config_save_load.py  test_ecumaster_workflow.py  test_professional_workflow.py  version_info.txt
configurator/docs/: CHANNEL_SELECTOR.md  ECUMASTER_UI_DESIGN.md  JSON_VALIDATION.md  PROFESSIONAL_UI_DESIGN.md  QT_STYLES.md  TECH_DEBT_PLAN.md  UI_IMPROVEMENTS.md
configurator/src/: constants.py  main.py  main_ecumaster.py  main_professional.py
configurator/src/communication/: __init__.py  comm_manager.py  device_simulator.py  emulator_transport.py  protocol.py  serial_transport.py  telemetry.py  telemetry_observer.py  transport_base.py
configurator/src/controllers/: __init__.py  connection_recovery.py  device_controller.py  protocol_handler.py  request_tracker.py  telemetry_manager.py  transport.py
configurator/src/emulator_monitor/: __init__.py  __main__.py  main_window.py
configurator/src/models/: __init__.py  binary_config.py  channel.py  channel_display_service.py  config_can.py  config_manager.py  config_migration.py  config_schema.py  gpio.py  quantities.py  undo_manager.py
configurator/src/ui/: main_window.py  main_window_ecumaster.py  main_window_professional.py
configurator/src/utils/: __init__.py  canx_parser.py  constants.py  dbc_parser.py  decorators.py  error_handler.py  logger.py  theme.py  validation.py
configurator/tests/: README.md  __init__.py  test_comm_manager.py  test_config_manager.py  test_config_validation.py  test_protocol.py  test_telemetry.py
configurator/tests/integration/: __init__.py  conftest.py  helpers.py  test_analog_inputs.py  test_arithmetic_functions.py  test_atomic_config.py  test_can_inputs.py  test_channel_flow.py  test_connectivity_config.py  test_control_flow_critical.py  test_digital_inputs.py  test_filter_channels.py  test_flash_autosave.py  test_hbridge_pid.py  test_output_control.py  test_output_protection.py  test_output_pwm.py  test_switch_channels.py  test_tables.py  test_timer_operations.py
configurator/tests/ui/: README.md  __init__.py  (+14 more)
(+515 files in other folders)
